@@ -16,36 +16,29 @@
  */
 package org.apache.solr.core;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
-import com.google.common.collect.ImmutableSet;
-import org.apache.solr.common.util.NamedList;
-import org.apache.solr.common.util.StrUtils;
-
 import static org.apache.solr.common.params.CommonParams.NAME;
 import static org.apache.solr.common.params.CommonParams.PATH;
 import static org.apache.solr.core.PluginInfo.APPENDS;
 import static org.apache.solr.core.PluginInfo.DEFAULTS;
 import static org.apache.solr.core.PluginInfo.INVARIANTS;
 
-/**
- * An Object which represents a {@code <initParams>} tag
- */
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import org.apache.solr.common.util.NamedList;
+import org.apache.solr.common.util.StrUtils;
+
+/** An Object which represents a {@code <initParams>} tag */
 public class InitParams {
   public static final String TYPE = "initParams";
   public final String name;
   public final Set<String> paths;
-  @SuppressWarnings({"rawtypes"})
-  public final NamedList defaults;
-  @SuppressWarnings({"rawtypes"})
-  public final NamedList invariants;
-  @SuppressWarnings({"rawtypes"})
-  public final NamedList  appends;
-  final private PluginInfo pluginInfo;
-  private final Set<String> KNOWN_KEYS = ImmutableSet.of(DEFAULTS, INVARIANTS, APPENDS);
+  public final NamedList<?> defaults;
+  public final NamedList<?> invariants;
+  public final NamedList<?> appends;
+  private final PluginInfo pluginInfo;
+  private static final Set<String> KNOWN_KEYS = Set.of(DEFAULTS, INVARIANTS, APPENDS);
 
   public InitParams(PluginInfo p) {
     this.pluginInfo = p;
@@ -56,12 +49,11 @@ public class InitParams {
       paths = Set.copyOf(StrUtils.splitSmart(pathStr, ','));
     }
     this.paths = paths;
-    @SuppressWarnings({"rawtypes"})
-    NamedList nl = (NamedList) p.initArgs.get(DEFAULTS);
+    NamedList<?> nl = (NamedList<?>) p.initArgs.get(DEFAULTS);
     defaults = nl == null ? null : nl.getImmutableCopy();
-    nl = (NamedList) p.initArgs.get(INVARIANTS);
+    nl = (NamedList<?>) p.initArgs.get(INVARIANTS);
     invariants = nl == null ? null : nl.getImmutableCopy();
-    nl = (NamedList) p.initArgs.get(APPENDS);
+    nl = (NamedList<?>) p.initArgs.get(APPENDS);
     appends = nl == null ? null : nl.getImmutableCopy();
   }
 
@@ -91,49 +83,52 @@ public class InitParams {
     }
     String ps = pathSplit.size() > i ? pathSplit.get(i) : null;
     return "*".equals(ps) || "**".equals(ps);
-
   }
 
-  @SuppressWarnings({"unchecked", "rawtypes"})
   public void apply(PluginInfo info) {
     if (!info.isFromSolrConfig()) {
-      //if this is a component implicitly defined in code it should be overridden by initPrams
-      merge(defaults, (NamedList) info.initArgs.get(DEFAULTS), info.initArgs, DEFAULTS, false);
+      // if this is a component implicitly defined in code it should be overridden by initPrams
+      merge(defaults, (NamedList<?>) info.initArgs.get(DEFAULTS), info.initArgs, DEFAULTS, false);
     } else {
-      //if the args is initialized from solrconfig.xml inside the requestHandler it should be taking precedence over  initParams
-      merge((NamedList) info.initArgs.get(DEFAULTS), defaults, info.initArgs, DEFAULTS, false);
+      // if the args is initialized from solrconfig.xml inside the requestHandler it should be
+      // taking precedence over  initParams
+      merge((NamedList<?>) info.initArgs.get(DEFAULTS), defaults, info.initArgs, DEFAULTS, false);
     }
-    merge((NamedList) info.initArgs.get(INVARIANTS), invariants, info.initArgs, INVARIANTS, false);
-    merge((NamedList) info.initArgs.get(APPENDS), appends, info.initArgs, APPENDS, true);
+    merge(
+        (NamedList<?>) info.initArgs.get(INVARIANTS), invariants, info.initArgs, INVARIANTS, false);
+    merge((NamedList<?>) info.initArgs.get(APPENDS), appends, info.initArgs, APPENDS, true);
 
     if (pluginInfo.initArgs != null) {
       for (int i = 0; i < pluginInfo.initArgs.size(); i++) {
         String name = pluginInfo.initArgs.getName(i);
-        if (KNOWN_KEYS.contains(name)) continue;//already taken care of
+        if (KNOWN_KEYS.contains(name)) continue; // already taken care of
         Object val = info.initArgs.get(name);
-        if (val != null) continue; //this is explicitly specified in the reqhandler , ignore
+        if (val != null) continue; // this is explicitly specified in the reqhandler , ignore
         info.initArgs.add(name, pluginInfo.initArgs.getVal(i));
       }
     }
   }
 
-  @SuppressWarnings({"unchecked", "rawtypes"})
-  private static void merge(NamedList first, NamedList second, NamedList sink, String name, boolean appends) {
+  @SuppressWarnings("unchecked")
+  private static void merge(
+      NamedList<?> first,
+      NamedList<?> second,
+      NamedList<Object> sink,
+      String name,
+      boolean appends) {
     if (first == null && second == null) return;
-    if (first == null) first = new NamedList();
-    NamedList nl = first.clone();
+    if (first == null) first = new NamedList<>();
+    NamedList<Object> nl = (NamedList<Object>) first.clone();
     if (appends) {
-      if (second != null) nl.addAll(second);
+      if (second != null) nl.addAll((NamedList<Object>) second);
     } else {
       Set<String> a = new HashSet<>();
       Set<String> b = new HashSet<>();
-      for (Object o : first) {
-        Map.Entry<String, Object> e = (Map.Entry) o;
+      for (Map.Entry<String, ?> e : first) {
         a.add(e.getKey());
       }
       if (second != null) {
-        for (Object o : second) {
-          Map.Entry<String, Object> e = (Map.Entry) o;
+        for (Map.Entry<String, ?> e : second) {
           b.add(e.getKey());
         }
       }
